--- a/Projects/06.OmniFood/css/queries.css
+++ b/Projects/06.OmniFood/css/queries.css
@@ -124,10 +124,14 @@
 
   .btn-mobile-nav {
     display: block;
+    z-index: 1000;
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.9);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+
     position: absolute;
     top: 0;
     left: 0;
@@ -218,7 +222,7 @@
 }
 
 /*********************************************************/
-/*             BELOW 704PX (SMALLER DESKTOPS)            */
+/*                    BELOW 704PX (PHONES)               */
 /*********************************************************/
 
 @media (max-width: 34em) {
